# verify

./: CLAUDE.md  DEPLOY.md  LICENSE  README.md  pyproject.toml
aerodeck_verify/: __init__.py  advisory.py  cli.py  gate.py  judge.py
tests/: test_advisory.py  test_cli.py  test_gate.py  test_judge.py
tools/: leak-audit.sh
